--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
